--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -32,6 +32,7 @@
             value=departing 
             class="form-control" 
             placeholder="Departing date"
+            autoclose=true
           }}
         </div>
         <div class="form-group">
@@ -42,6 +43,7 @@
             placeholder="Returning date"
             startDate=departing
             disabled=(unless isValidDeparting "disabled")
+            autoclose=true
           }}
         </div>
       </div>
