Added requests for airlines and airports

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -52,7 +52,7 @@
   <button 
     class="btn btn-success"
     disabled={{unless isValidForm "disabled"}}
-    {{action "searchFlights"}} 
+    {{!-- {{action "searchFlights"}}  --}}
   >
     Search flights
   </button>
