Added flights-api requests and changed tables

--- a/app/templates/components/departings-table.hbs
+++ b/app/templates/components/departings-table.hbs
@@ -1,5 +1,2 @@
-<h2>Departings table</h2>
-{{#ember-table as |t|}}
-  {{t.head columns=columns}}
-  {{t.body rows=rows}}
-{{/ember-table}}
+<h2>Departings</h2>
+{{flights-table flights=departings}}
