--- a/app/templates/components/returnings-table.hbs
+++ b/app/templates/components/returnings-table.hbs
@@ -1,5 +1,2 @@
-<h2>Returnings table</h2>
-{{#ember-table as |t|}}
-  {{t.head columns=columns}}
-  {{t.body rows=rows}}
-{{/ember-table}}
+<h2>Returnings</h2>
+{{flights-table flights=returnings}}
